<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/Playing">

    <fragment
        android:id="@+id/Playing"
        android:name="com.example.lykkehjulet.GameFragment"
        android:label="@string/game_fragment_label"
        tools:layout="@layout/gamefragment">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_highScores"
            app:destination="@id/highScores" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.lykkehjulet.LostGameFragment"
        android:label="@string/loss_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/Playing" />
    </fragment>
    <fragment
        android:id="@+id/highScores"
        android:name="com.example.lykkehjulet.WonGameFragment"
        android:label="@string/higscores_fragment"
        tools:layout="@layout/fragment_high_scores" >
        <action
            android:id="@+id/action_highScores_to_FirstFragment"
            app:destination="@id/Playing" />
    </fragment>
</navigation>